--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,26 +1,45 @@
-    <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
-
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto d-flex align-items-center">
-          <li class="nav-item active">
-            <img src="https://github.com/RebecaMarquesSilva.png" alt="Imagem do Usuário" width="50px" height="50px" class="img-fluid rounded-circle">
-          </li>
-          <li class="nav-item">
-            <p class='font-weight-bold m-0 ml-3 fs-16 text-light'>Bem vinda, Rebeca Marques!</p>
-          </li>
-          <li class="nav-item pl-3">
-              <a href="">
-                <p class="fs-16 text-light m-0"><i class="fa fa-pencil" aria-hidden="true"></i></p>
-              </a>   
-          </li>
-        </ul>
-        <ul class="navbar-nav ml-auto d-flex align-items-center">
-            <li class="nav-item pl-3">
-                <a class="ml-0 font-weight-bold text-light fs-16">Sair <i class="fa fa-sign-out ml-2" aria-hidden="true"></i></a>
-            </li>
-        </ul>
-      </div>
-  </nav>
+<nav class="navbar navbar-expand-lg navbar-light bg-secondary">
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-toggle="collapse"
+    data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto d-flex align-items-center">
+      <li class="nav-item active">
+        <img
+          src="https://github.com/RebecaMarquesSilva.png"
+          alt="Imagem do Usuário"
+          width="50px"
+          height="50px"
+          class="img-fluid rounded-circle"
+        />
+      </li>
+      <li class="nav-item">
+        <p class="font-weight-bold m-0 ml-3 fs-16 text-light">
+          Bem vinda, Rebeca Marques!
+        </p>
+      </li>
+      <li class="nav-item pl-3">
+        <a href="">
+          <p class="fs-16 text-light m-0">
+            <i class="fa fa-pencil" aria-hidden="true"></i>
+          </p>
+        </a>
+      </li>
+    </ul>
+    <ul class="navbar-nav ml-auto d-flex align-items-center">
+      <li class="nav-item pl-3">
+        <a class="ml-0 font-weight-bold text-light fs-16"
+          >Sair <i class="fa fa-sign-out ml-2" aria-hidden="true"></i
+        ></a>
+      </li>
+    </ul>
+  </div>
+</nav>
