@RebecaMarquesSilva [Ajustes - Links Rodape]

--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -11,27 +11,30 @@
         <ul class="social-network">
           <li>
             <a
-              href="https://www.facebook.com/generationbrasil/"
+              href="https://github.com/RebecaMarquesSilva"
               target="_blank"
-              class="iconeFacebook"
+              class="icoGithub"
+            >
+              <i class="fa fa-github" aria-hidden="true"></i
             ></a>
-            <i class="fa fa-facebook-square" aria-hidden="true"></i>
           </li>
           <li>
             <a
               href="https://www.instagram.com/generationbrasil/"
               target="_blank"
-              class="iconeInstagram"
+              class="icoInsta"
+            >
+              <i class="fa fa-instagram" aria-hidden="true"></i
             ></a>
-            <i class="fa fa-instagram" aria-hidden="true"></i>
           </li>
           <li>
             <a
-              href="https://www.linkedin.com/school/generationbrasil"
+              href="https://www.linkedin.com/in/rebecamarques-rmsg/"
               target="_blank"
-              class="iconeLinkedin"
+              class="icoLinkedin"
+            >
+              <i class="fa fa-linkedin" aria-hidden="true"></i
             ></a>
-            <i class="fa fa-linkedin" aria-hidden="true"></i>
           </li>
         </ul>
       </div>
