--- a/src/app/rodape/rodape.component.css
+++ b/src/app/rodape/rodape.component.css
@@ -15,8 +15,8 @@ ul.social-network li {
   padding: 10px;
 }
 
-.fa-facebook-square:hover {
-  color: #3b5998;
+.fa-github:hover {
+  color: #111010;
 }
 
 .fa-instagram:hover {
