--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -1,11 +1,11 @@
 <div class="container-fluid">
-  <div class="row">
+  <div class="row d-flex align-items-center">
     <div class="col-md-6" id="img-bg"></div>
 
     <div class="col-md-6" mt-5 mb-5>
       <div class="row d-flex justify-content-center">
         <div class="col-md-10">
-          <h1 class="test-center">Cadastro</h1>
+          <h1 class="text-center">Cadastro</h1>
 
           <div class="form-group">
             <label for="nome">Nome</label>
@@ -72,7 +72,7 @@
           </div>
 
           <div class="d-flex justify-content-center">
-            <button type="submit" class="btn btn-danger mr-4">Cancelar</button>
+            <button type="submit" class="btn btn-danger mr-4" routerLink="/entrar">Cancelar</button>
             <button type="submit" class="btn btn-success">Cadastrar</button>
           </div>
         </div>
