--- a/src/app/entrar/entrar.component.css
+++ b/src/app/entrar/entrar.component.css
@@ -1,8 +1,8 @@
 #img-bg {
   background-image: url(https://i.imgur.com/xrJ9G3N.jpg);
 
-  min-height: 695px;
-  background-position: center;
+  min-height: 100vh;
+  background-position: top;
   background-repeat: no-repeat;
   background-size: cover;
 }
