@RebecaMarquesSilva [Update - Consumo de API]

--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -10,6 +10,7 @@
           <div class="form-group">
             <label for="nome">Nome</label>
             <input
+              [(ngModel)]="user.nome"
               type="text"
               class="form-control"
               name="nome"
@@ -21,6 +22,7 @@
           <div class="form-group">
             <label for="usuario">Usuário</label>
             <input
+              [(ngModel)]="user.usuario"
               type="text"
               class="form-control"
               name="usuario"
@@ -32,6 +34,7 @@
           <div class="form-group">
             <label for="foto">Link da Foto</label>
             <input
+            [(ngModel)]="user.foto"
               type="text"
               class="form-control"
               name="foto"
@@ -42,7 +45,7 @@
 
           <div class="form-group">
             <label for="senha">Senha</label>
-            <input
+            <input (input)="confirmSenha($event)"
               class="form-control"
               type="password"
               name="senha"
@@ -54,6 +57,7 @@
           <div class="form-group">
             <label for="confirmarSenha">Confirmar Senha</label>
             <input
+              [(ngModel)]="user.senha"
               class="form-control"
               type="password"
               name="confirmarSenha"
@@ -64,7 +68,7 @@
 
           <div class="form-group">
             <label for="tipo">Tipo de Usuário</label>
-            <select class="form-control" name="tipo" id="tipo">
+            <select class="form-control" name="tipo" id="tipo" (change)="tipoUser($event)">
               <option>Selecione um tipo de usuário:</option>
               <option value="normal">Normal</option>
               <option value="adm">Administrador</option>
@@ -73,7 +77,7 @@
 
           <div class="d-flex justify-content-center">
             <button type="submit" class="btn btn-danger mr-4" routerLink="/entrar">Cancelar</button>
-            <button type="submit" class="btn btn-success">Cadastrar</button>
+            <button type="submit" class="btn btn-success" (click)="cadastrar()">Cadastrar</button>
           </div>
         </div>
       </div>
