--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -14,7 +14,7 @@
     <ul class="navbar-nav mr-auto d-flex align-items-center">
       <li class="nav-item active">
         <img
-          src="https://github.com/RebecaMarquesSilva.png"
+          src="{{foto}}"
           alt="Imagem do Usuário"
           width="50px"
           height="50px"
@@ -23,7 +23,7 @@
       </li>
       <li class="nav-item">
         <p class="font-weight-bold m-0 ml-3 fs-16 text-light">
-          Bem vinda, Rebeca Marques!
+          Olá, {{nome}}!
         </p>
       </li>
       <li class="nav-item pl-3">
@@ -36,7 +36,8 @@
     </ul>
     <ul class="navbar-nav ml-auto d-flex align-items-center">
       <li class="nav-item pl-3">
-        <a class="ml-0 font-weight-bold text-light fs-16"
+        <a (click)="sair()"
+        class="ml-0 font-weight-bold text-light fs-16"
           >Sair <i class="fa fa-sign-out ml-2" aria-hidden="true"></i
         ></a>
       </li>
