--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -16,9 +16,7 @@
         <img
           src="{{foto}}"
           alt="Imagem do Usuário"
-          width="50px"
-          height="50px"
-          class="img-fluid rounded-circle"
+          class='imgPerfil'
         />
       </li>
       <li class="nav-item">
