--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -19,7 +19,7 @@
 
       </div>
 
-      
+
       <div class="col-md-6 d-flex justify-content-center">
         <img src="https://i.imgur.com/JjU8d8D.png" alt="Grupo Conversando" width="500px" height="500px">
       </div>
@@ -69,25 +69,25 @@
       <div class="modal-body">
         <div class="form-group">
           <label for="titulo">Título</label>
-          <input type="text" class="form-control" id="titulo" placeholder="Digite o título">
+          <input [(ngModel)]='postagem.titulo' type="text" class="form-control" id="titulo" placeholder="Digite o título">
         </div>
 
         <div class="form-group">
           <label for="texto">Texto</label>
-          <textarea class="form-control" name="texto" id="texto" placeholder="Digite o texto" rows="3"></textarea>
+          <textarea [(ngModel)]='postagem.texto' class="form-control" name="texto" id="texto" placeholder="Digite o texto" rows="3"></textarea>
         </div>
 
         <div class="form-group">
           <label for="texto">Escolha um tema ou <a data-dismiss="modal" routerLink="/tema">cadastre um novo</a>: </label>
-          <select class="form-control" name="tema" id="tema">
-            <option value="">Temas</option>
+          <select class="form-control" name="tema" id="tema" [(ngModel)]='idTema' (change)="findByIdTema()">
+            <option *ngFor="let item of listaTemas" value="{{item.id}}">{{item.descricao}}</option>
           </select>
         </div>
 
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
-        <button type="button" class="btn btn-success">Publicar</button>
+        <button type="button" class="btn btn-success" (click)="publicar()" data-dismiss="modal">Publicar</button>
       </div>
     </div>
   </div>
