--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -25,7 +25,7 @@
         </p>
       </li>
       <li class="nav-item pl-3">
-        <a href="">
+        <a [routerLink]="['/user-edit', id]">
           <p class="fs-16 text-light m-0">
             <i class="fa fa-pencil" aria-hidden="true"></i>
           </p>
