--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -48,8 +48,16 @@
   <div class="tab-content mt-5" id="myTabContent">
     <div class="tab-pane fade show active" id="todasPostagens" role="tabpanel" aria-labelledby="nav-todasPostagens-tab">
 
+  <div class="row d-flex justify-content-center my-5">
+    <div class="col-md-4">
+      <div class="form-group">
+        <input type="text" class="form-control" id="titulo" placeholder="Digite um título de postagem para pesquisar" [(ngModel)] = 'tituloPost' (keyup)="findByTituloPostagem()">
+      </div>
+    </div>
+  </div>
+
       <div class="card-columns">
-        <div class="card text-center" *ngFor='let item of listaPostagens'>
+        <div class="card text-center" *ngFor='let item of listaPostagens | orderBy : key : reverse'>
           <div class="card-body">
             <h5 class="card-title m-0">{{item.titulo}}</h5>
             <small class="text-muted">Tema: {{item.tema.descricao}}</small>
@@ -65,7 +73,7 @@
     <div class="tab-pane fade" id="minhasPostagens" role="tabpanel" aria-labelledby="nav-minhasPostagens-tab">
 
       <div class="card-columns">
-        <div class="card text-center" *ngFor='let item of user.postagem'>
+        <div class="card text-center" *ngFor='let item of user.postagem | orderBy : key : reverse'>
           <div class="card-body">
             <h5 class="card-title m-0">{{item.titulo}}</h5>
             <small class="text-muted">Tema: {{item.tema.descricao}}</small>
@@ -85,8 +93,16 @@
 
     <div class="tab-pane fade" id="postagemTema" role="tabpanel" aria-labelledby="nav-postagemTema-tab">
 
+      <div class="row d-flex justify-content-center my-5">
+        <div class="col-md-4">
+          <div class="form-group">
+            <input type="text" class="form-control" id="titulo" placeholder="Pesquise as postagens pelo tema" [(ngModel)] = 'descricaoTema' (keyup)="findByDescricaoTema()">
+          </div>
+        </div>
+      </div>
+
       <div class="card-columns" *ngFor="let tema of listaTemas">
-        <div class="card text-center" *ngFor='let item of tema.postagem'>
+        <div class="card text-center" *ngFor='let item of tema.postagem | orderBy : key : reverse'>
           <div class="card-body">
             <h5 class="card-title m-0">{{item.titulo}}</h5>
             <p class="card-text mt-3">{{item.texto}}</p>
